--- a/mobile-app/crate_app/pubspec.yaml
+++ b/mobile-app/crate_app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.9.1
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
