--- a/mobile-app/crate_app/pubspec.yaml
+++ b/mobile-app/crate_app/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   google_sign_in: ^6.3.0
+  lottie: ^3.3.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,7 @@ flutter:
     - assets/images/icon/apple.png
     - assets/images/icon/google.png
     - assets/images/icon/take_photo.png
+    - assets/images/animations/login.json
 
   fonts:
     - family: SFPro
