--- a/mobile-app/crate_app/pubspec.yaml
+++ b/mobile-app/crate_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_sign_in: ^6.3.0
   lottie: ^3.3.1
   http: ^1.3.0
+  google_maps_flutter: ^2.11.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,9 @@ flutter:
     - assets/images/icon/google.png
     - assets/images/icon/take_photo.png
     - assets/images/animations/login.json
+    - assets/images/animations/login1.json
+    - assets/images/icon/default_user.png
+    - assets/images/icon/truck.png
 
   fonts:
     - family: SFPro
