--- a/mobile-app/crate_app/pubspec.yaml
+++ b/mobile-app/crate_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   lottie: ^3.3.1
   http: ^1.3.0
   google_maps_flutter: ^2.11.0
+  geolocator: ^13.0.3
 
 dev_dependencies:
   flutter_test:
