--- a/mobile-app/crate_app/pubspec.yaml
+++ b/mobile-app/crate_app/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   http: ^1.3.0
   google_maps_flutter: ^2.11.0
   geolocator: ^13.0.3
+  pdf: ^3.11.3
+  file_picker: ^10.1.2
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,7 @@ flutter:
     - assets/images/animations/login1.json
     - assets/images/icon/default_user.png
     - assets/images/icon/truck.png
+    - assets/images/logos/
 
   fonts:
     - family: SFPro
