--- a/mobile-app/crate_app/pubspec.yaml
+++ b/mobile-app/crate_app/pubspec.yaml
@@ -15,13 +15,13 @@ dependencies:
   camera: ^0.11.1
   path_provider: ^2.1.5
   path: ^1.9.1
-  firebase_core: ^3.12.1
-  firebase_auth: ^5.5.1
-  google_sign_in: ^6.3.0
   lottie: ^3.3.1
   http: ^1.3.0
   google_maps_flutter: ^2.11.0
   geolocator: ^13.0.3
+  pdf: ^3.11.3
+  file_picker: ^10.1.2
+  bcrypt: ^1.1.3
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +60,7 @@ flutter:
     - assets/images/icon/default_user.png
     - assets/images/icon/truck.png
     - assets/images/icon/restaurant.png
+    - assets/images/logos/Brughera_Drinks.png
 
   fonts:
     - family: SFPro
