--- a/mobile-app/crate_app/pubspec.yaml
+++ b/mobile-app/crate_app/pubspec.yaml
@@ -28,6 +28,9 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: "^0.14.3"
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
+  mocktail: ^1.0.4
 
 flutter_launcher_icons:
   ios: true
